<resources>
    <string name="app_name">VHDPlus Remote</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="local_connection">Local Connection</string>
    <string name="ip">IP:</string>
    <string name="ip_default">192.168.10.1</string>
    <string name="connect">Connect</string>
    <string name="mobile_connection">Mobile Connection</string>
    <string name="port">Port:</string>
    <string name="port_default">60</string>
    <string name="add">Add</string>
    <string name="legal_notice">Legal Notice</string>
    <string name="imprint">\n
Protop Solutions UG (haftungsbeschränkt)\n
Eichenstraße 7\n
49525 Lengerich\n
Germany\n
Phone: +49 (0)5481/845755\n
E-mail: info@vhdplus.com\n
Website: protop-solutions.com\n

Managing Directors: Leon Alexander Beier,\n
Hendrik Menno Mennen\n

Local court: Amtsgericht Steinfurt\n
Registration number: HRB 12577\n
VAT Reg. No.: DE 327 045 511</string>
</resources>